objects/redwing__Training_Plan_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>ltrpt__Account_Location__c</fullName>
        <formula>redwing__Contact__r.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltrpt__Account_Name__c</fullName>
        <formula>redwing__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Plan Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Due_Date__c</fullName>
        <inlineHelpText>Due Date for assignments to be completed</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Exempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>redwing__Progress_Percentage__c</fullName>
        <label>Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Total_Completed_Items__c</fullName>
        <label>Total Completed Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_InProgress_Items__c</fullName>
        <label>Total In Progress Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_InReview_Items__c</fullName>
        <label>Total In Review Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_NotStarted_Items__c</fullName>
        <label>Total Not Started Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Plan Assignment</label>
    <nameField>
        <displayFormat>LPAS-{0000000}</displayFormat>
        <label>Learning Plan Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>